// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenss 1`] = `
<div>
  <h1>
    Viewing 
    20
     
    expenses
     totalling 
    $200,000
  </h1>
</div>
`;
